@@ -57,11 +57,6 @@
         
         if(!pProcessing)
             pProcessing = {};
-                
-        else
-            Util.log('warning: configuretion file config.json not found...\n' +
-                'using default values...\n'                     +
-                JSON.stringify(lConfig));
         
         Rest            = pProcessing.rest;
         Route           = pProcessing.route;
