@@ -166,7 +166,8 @@ for now it's much simplier.
 
 * Fixed the first show of menu in firefox.
 
-* Added ability to change configs without restart.
+* Added ability to change configs without restart
+(works for js minification only).
 
 
 2012.12.12, Version 0.1.8
